# xf-typegen

./: .gitignore  Cargo.toml  LICENSE  README.md  extract.php  schema.json
.github/workflows/: release.yml
src/: contract.rs  extract.rs  lib.rs  main.rs  php.rs
src/generate/: ide_helper.rs  mod.rs  options.rs  phpstorm_meta.rs  xfcp.rs
tests/: generate.rs  php.rs
tests/contracts/: sample.json
