[package]
name = "xf-typegen"
version = "0.1.0"
edition = "2021"
description = "Generate real PHP types from XenForo's magic — full IDE autocomplete, no PhpStorm required."
license = "MIT"
repository = "https://github.com/wh1teend/xf-typegen"

[[bin]]
name = "xf-typegen"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
anyhow = "1"
notify = "6"
notify-debouncer-mini = "0.4"

[profile.release]
lto = true
strip = true
